// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`resolveConfig gets default config 1`] = `
Object {
  "baseDefaultProps": Object {
    "defaultClassName": "Icon",
    "fill": "currentColor",
  },
  "baseMapProps": "({center, text, ...props}) => {
  if (center) {
    props = {
      ...props,
      style: {
        ...props.style,
        verticalAlign: 'middle',
        position: 'relative',
        top: 'calc(-1em * 1/6)',
      },
    }
  }

  if (text) {
    props = {
      ...props,
      size: '1.2em',
    }
  }

  return props
}",
  "baseTemplate": [Function],
  "defaultProps": Object {},
  "filenameTemplate": [Function],
  "svgoPlugins": Array [],
  "template": [Function],
}
`;

exports[`resolveConfig overwrites default config 1`] = `
Object {
  "baseDefaultProps": Object {
    "defaultClassName": "MyIcon",
    "fill": "currentColor",
  },
  "baseMapProps": "({center, text, ...props}) => {
  if (center) {
    props = {
      ...props,
      style: {
        ...props.style,
        verticalAlign: 'middle',
        position: 'relative',
        top: 'calc(-1em * 1/6)',
      },
    }
  }

  if (text) {
    props = {
      ...props,
      size: '1.2em',
    }
  }

  return props
}",
  "baseTemplate": [Function],
  "defaultProps": Object {},
  "filenameTemplate": [Function],
  "svgoPlugins": Array [
    Object {
      "removeAttrs": Object {
        "attrs": "fill",
      },
    },
  ],
  "template": [Function],
}
`;
